bloc init
